--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,13 @@ body {
 .container h2 {
   text-align: center;
   color: white;
+  font-size: 20px;
+  margin: 0;
+}
+
+.container h3 {
+  text-align: center;
+  color: white;
   font-size: 40px;
   margin-bottom: 0;
 }
